[Fixes #62335906] Display unimportable column info more visibly
 - All of the useful info was hidden in scroll land. This was not apparent,
   especially on mac where scroll bars are often hidden.

--- a/app/assets/stylesheets/modals/_alert.scss
+++ b/app/assets/stylesheets/modals/_alert.scss
@@ -52,7 +52,7 @@
             padding: 10px;
             overflow-y: auto;
             overflow-x: hidden;
-            max-height: 100px;
+            max-height: 300px;
             border: 1px solid $border-color;
             font-size: 12px;
             font-weight: normal;
